--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,6 @@ name: Radiodan
 markdown: redcarpet
 pygments: true
 exclude: [Gemfile*]
+name: Radiodan Blog
+description: An (experimental) homebrew, flexible, open source, IP radio
+url: http://radiodan.github.io
