Updated instructions for laptop to zeromq

--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ highlighter: pygments
 exclude: [Gemfile*]
 description: An (experimental) homebrew, flexible, open source, IP radio
 url: http://radiodan.github.io
+exclude: [vendor]
