Trying to get it to build the blog

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 name: Radiodan
-highlighter: pygments
+highlighter: rouge
 exclude: [Gemfile*]
 description: An (experimental) homebrew, flexible, open source, IP radio
 url: http://radiodan.github.io
+baseurl: / 
 exclude: [vendor]
